--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,9 @@ subject to change and not guaranteed to be compatible with
 the later release.
 USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
 
+* Setting "connection.stable-id=default${CONNECTION}" changed behavior to
+  be identical to the built-in default value when the stable-id is not set.
+
 =============================================
 NetworkManager-1.42
 Overview of changes since NetworkManager-1.40
