NEWS: belatedly mention default for ipv6.addr-gen-mode
Fixes: e6a33c04ebe1 ('all: make "ipv6.addr-gen-mode" configurable by global default')
(cherry picked from commit 48a3682a75bed6e65836341d1a13be5ed3f77939)
(cherry picked from commit 987f98197b04c4786a9501ef0e034377e64fb0d7)

--- a/NEWS
+++ b/NEWS
@@ -152,6 +152,8 @@ Overview of changes since NetworkManager-1.38
   paragraphs.
 * Support enabling ipv4ll alongside DHCPv4 and static addressing.
 * Support configuring "ipv6.mtu".
+* The "ipv6.addr-gen-mode" property can now have a default value
+  specified via global connections defaults in NetworkManager.conf.
 * Honor "nm.debug" kernel command line to enable debug logging of
   NetworkManager.
 * NetworkManager reads the kernel command line "/proc/cmdline" for several
