--- a/NEWS
+++ b/NEWS
@@ -4,15 +4,16 @@ Overview of changes since NetworkManager-1.42.6
 ===============================================
 
 * Add support for ppp 2.5.0.
-- Fix nft rules for balance-slb bonding.
-- Support port priority for bonding.
-- Fix regression handling the PKEY_ID for infiniband profiles
+* Fix nft rules for balance-slb bonding.
+* Support port priority for bonding.
+* Fix regression handling the PKEY_ID for infiniband profiles
   in ifcfg-rh format.
-- Fix race in nm-cloud-setup that caused partial configuration
+* Fix race in nm-cloud-setup that caused partial configuration
   and loss of connectivity with multiple interfaces.
-- Don't touch "net.ipv6.conf.$IFACE.forwarding" unless explicitly
+* Don't touch "net.ipv6.conf.$IFACE.forwarding" unless explicitly
   required for IPv6 sharing.
-- Various bugfixes related to team, Wi-Fi P2P, IPv6LL.
+* Various bugfixes related to team, Wi-Fi P2P, IPv6LL.
+* Automatically unblock autoconnect of profiles during reapply.
 
 ===============================================
 NetworkManager-1.42.6
