device/ethernet: honor ID_NET_AUTO_LINK_LOCAL_ONLY udev property
We honored "NM_AUTO_DEFAULT_LINK_LOCAL_ONLY" udev property, for when we
generate a "Wired connection 1" (aka the "auto-default connection").

Systemd now also honors and may set ID_NET_AUTO_LINK_LOCAL_ONLY for
a similar purpose. Honore that too.

The NM specific variable still is preferred, also because "NM_AUTO_DEFAULT_LINK_LOCAL_ONLY"
is about something very NetworkManager specific (controlling "Wired connection 1").

Maybe one day, we should drop "data/90-nm-thunderbolt.rules" and only
rely on what systemd provides. But not yet.

See-also: https://github.com/systemd/systemd/pull/29767
https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/issues/1413

--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,13 @@
 =============================================
 NetworkManager-1.46
-Overview of changes since NetworkManager-1.46
+Overview of changes since NetworkManager-1.44
 =============================================
 
 * Change internal ABI of NMSetting types and NMSimpleConnection. The layout of
   these structs was already hidden from public headers since 1.34 and this change
   should not be noticeable.
+* Honor udev property ID_NET_AUTO_LINK_LOCAL_ONLY=1 for enabling
+  link local addresses on default wired connection.
 
 =============================================
 NetworkManager-1.44
