core: honor ID_NET_MANAGED_BY="org.freedesktop.NetworkManager" to manage device
If ID_NET_MANAGED_BY= attribute is set, we have an indication who is
responsible for the device. If this is set to anything but
"org.freedesktop.NetworkManager", then the device is unmanaged.

The effect is the same as setting NM_UNMANAGED= attribute. NM_UNMANAGED=
takes precedence over this setting.

See-also: https://github.com/systemd/systemd/issues/29768
See-also: https://github.com/systemd/systemd/pull/29782

--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ Overview of changes since NetworkManager-1.44
   should not be noticeable.
 * Honor udev property ID_NET_AUTO_LINK_LOCAL_ONLY=1 for enabling
   link local addresses on default wired connection.
+* Honor udev property ID_NET_MANAGED_BY to only manage an interface
+  when set to "org.freedesktop.NetworkManager".
 
 =============================================
 NetworkManager-1.44
