all: drop support for building with Python2
Now that we no longer test on CentOS7, we also have no more tests that
build using Python2.

Note that build with Python2 is currently broken already (which would be
fixable).

Drop Python2 too.

Existing Python scripts still use a common subset of Python2 and
Python3. They can be improved to use Python3 features in the future.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,7 @@ Overview of changes since NetworkManager-1.44
   link local addresses on default wired connection.
 * Honor udev property ID_NET_MANAGED_BY to only manage an interface
   when set to "org.freedesktop.NetworkManager".
+* Drop build support with Python2. Python3 is now required.
 
 =============================================
 NetworkManager-1.44
