cli: limit number of shown addresses/routes in `nmcli` overview
If you add a large number of addresses/routes, then the output of
`nmcli` is unusable. It also doesn't seem too useful.

Limit the number to show up to 10 addresses and 10 routes.

If there are more than 10 addresses, then print an 11th line with

    inet4 ... N more

Actually, if there are exactly 11 addresses, then don't waste an extra
line to print "1 more". Instead, still print the 11th address. Same for
routes.

--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,7 @@ Overview of changes since NetworkManager-1.44
 * Honor udev property ID_NET_MANAGED_BY to only manage an interface
   when set to "org.freedesktop.NetworkManager".
 * Drop build support with Python2. Python3 is now required.
+* nmcli: limit number of printed addresses/routes in `nmcli` overview to 10.
 
 =============================================
 NetworkManager-1.44
