po: Fix typo in indonesian translation
Detected thanks to this message when generating the pot files:
id.po:14392: warning: internationalized messages should not contain
the '\v' escape sequence.

Due to the formatting of the string that contains it, it seems clear
that the \v character and the preceding work was put there by mistake.

--- a/po/id.po
+++ b/po/id.po
@@ -13755,7 +13755,7 @@ msgstr ""
 "  'conf'        Memuat ulang konfigurasi NetworkManager.conf dari disk.\n"
 "                Perhatikan bahwa ini tidak termasuk koneksi, yang dapat\n"
 "                dimuat ulang melalui 'nmcli connection reload' "
-"sebagai\v                gantinya.\n"
+"                gantinya.\n"
 "\n"
 "  'dns-rc'      Memperbarui konfigurasi DNS, yang biasanya melibatkan\n"
 "                penulisan /etc/resolv.conf baru.\n"
