--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -14579,7 +14579,7 @@ msgstr "跃点数"
 
 #: src/nmtui/nmt-route-table.c:201
 msgid "No custom routes are defined."
-msgstr "未定义自定义陆游。"
+msgstr "未定义自定义路由。"
 
 #: src/nmtui/nmt-port-list.c:126
 msgid "Select the type of slave connection you wish to add."
