--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,14 @@
 =============================================
+NetworkManager-1.48
+Overview of changes since NetworkManager-1.46
+=============================================
+
+This is a snapshot of NetworkManager development. The API is
+subject to change and not guaranteed to be compatible with
+the later release.
+USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
+
+=============================================
 NetworkManager-1.46
 Overview of changes since NetworkManager-1.44
 =============================================
