--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@ USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
 
 * Support changing the OpenSSL ciphers for 802.1X authentication via
   connection property "802-1x.openssl-ciphers".
+* The reason why a device is unmanaged is now properly set in the
+  "StateReason" property of the "Device" D-Bus object. The property is
+  visible in nmcli via "nmcli -f all device show $DEV".
 
 =============================================
 NetworkManager-1.46
