--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,8 @@ USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
 * The reason why a device is unmanaged is now properly set in the
   "StateReason" property of the "Device" D-Bus object. The property is
   visible in nmcli via "nmcli -f all device show $DEV".
+* Deprecated 802-11-wireless and 802-11-wired property 'mac-address-blacklist'
+  and introduced the 'mac-address-denylist' property.
 
 =============================================
 NetworkManager-1.46
