wifi: fix enumeration of 6 GHz channels from wiphy
Command NL80211_CMD_GET_WIPHY without any flag only returns channels
in the 2 GHz and 5 GHz bands, for backwards compatibility with old
userspace tools. To get the full list we need to pass attribute
NL80211_ATTR_SPLIT_WIPHY_DUMP (added in Linux 3.9 released in 2013),
and allow the handler to be called multiple times.

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/issues/1500

--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,7 @@ USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
   visible in nmcli via "nmcli -f all device show $DEV".
 * Deprecated 802-11-wireless and 802-11-wired property 'mac-address-blacklist'
   and introduced the 'mac-address-denylist' property.
+* Fix detection of 6 GHz band capability for WiFi devices
 
 =============================================
 NetworkManager-1.46
