--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+===============================================
+NetworkManager-1.46.2
+Overview of changes since NetworkManager-1.46.0
+===============================================
+
+* Properly restore in-memory connection profiles during the rollback
+  of a checkpoint.
+
 =============================================
 NetworkManager-1.46
 Overview of changes since NetworkManager-1.44
