--- a/NEWS
+++ b/NEWS
@@ -791,7 +791,7 @@ This is a new stable release of NetworkManager.  Notable changes include:
 
 * The libnm-glib library, deprecated in favor of libnm since NetworkManager 1.0,
   and disabled by default since NetworkManager 1.12, has now been removed.
-* The DHCP client now defaults to "internal". The default can be overriden
+* The DHCP client now defaults to "internal". The default can be overridden
   at build time by using the --with-config-dhcp-default option of the
   configure script or at run time by setting the main.dhcp option in the
   configuration file.
