libnm,nmcli: introduce a ipv4.dhcp-use-routes property
The DHCP server can provide routes to clients using different options:

 - 3 (Router): only for the default gateway
 - 121 (Classless Static Route)
 - 249 (Microsoft Classless Static Route)
 - 33 (Static Route)

TunnelVision [1] is a recently published technique that allows a
malicious actor to reroute the victim's traffic that should normally
directed to a VPN, by injecting higher priority routes into the
victim's routing table via the options mention above.

A defense to this attack is to ignore the non-default routes from
those options; introduce a ipv4.dhcp-use-routes property for this
purpose.

The property is currently implemented on the NMSettingIpConfig
setting, and so it can be potentially implemented also for IPv6 in the
future. At the moment it's not because DHCPv6 doesn't provide routes.

[1]  https://github.com/leviathansecurity/TunnelVision/

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/issues/1535

--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,6 @@
 NetworkManager-1.50
 Overview of changes since NetworkManager-1.48
 =============================================
-
 This is a snapshot of NetworkManager development. The API is
 subject to change and not guaranteed to be compatible with
 the later release.
@@ -26,6 +25,8 @@ USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
 * Support reapplying the VLANs on bridge ports.
 * Fix crash caused by malformed LLDP package if debug log is enabled
 * Retry hostname resolution when it fails
+* Add a new "ipv4.dhcp-use-routes" property that specifies whether
+  routes received via DHCP must be used or not.
 
 =============================================
 NetworkManager-1.48
