connectivity: Add a timeout option to connectivity checks
Adds an option in the connectivity section to change the timeout before
the interface is deemed "limited". Previously, it was hardcoded to
20 seconds, but for our usecase (failing over to cell modem if
hardwired ethernet drops), it's nice to be able to failover to another
interface more quickly.

--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,7 @@ the later release.
 USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
 
 * Support matching a OVS system interface by MAC address.
+* Add a timeout option to connectivity checking.
 
 =============================================
 NetworkManager-1.48
