core: also use /etc/hosts for hostname resolution
Before introducing the hostname lookup via nm-daemon-helper and
systemd-resolved, we used GLib's GResolver which internally relies on
the libc resolver and generally also returns results from /etc/hosts.

With the new mechanism we only ask to systemd-resolved (with
NO_SYNTHESIZE) or perform the lookup via the "dns" NSS module. In both
ways, /etc/hosts is not evaluated.

Since users relied on having the hostname resolved via /etc/hosts,
restore that behavior. Now, after trying the resolution via
systemd-resolved and the "dns" NSS module, we also try via the "files"
NSS module which reads /etc/hosts.

Fixes: 27eae4043b27 ('device: add a nm_device_resolve_address()')
(cherry picked from commit 410afccb32f5814c6aeebec837505e3f94b7408c)

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ Overview of changes since NetworkManager-1.48.2
 ===============================================
 
 * Support matching a OVS system interface by MAC address.
+* When looking up the system hostname from the reverse DNS lookup of
+  addresses configured on interfaces, NetworkManager now takes into
+  account the content of /etc/hosts.
 
 ===============================================
 NetworkManager-1.48.2
