ovs: allow specifying a system OVS interface by MAC address
The OVS interface can be matched via MAC address; in that case, the
"connection.interface-name" property of the connection is empty.

When populating the ovsdb, we need to pass the actual interface name
from the device, not the one from the connection.

Fixes: 830a5a14cb29 ('device: add support for OpenVSwitch devices')

https://issues.redhat.com/browse/RHEL-34617
(cherry picked from commit be28a1173537f664e2bf14c73db1715a60ade7f0)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+===============================================
+NetworkManager-1.48.2
+Overview of changes since NetworkManager-1.48.0
+===============================================
+
+* Support matching a OVS system interface by MAC address.
+
 =============================================
 NetworkManager-1.48
 Overview of changes since NetworkManager-1.46
