ovs: allow specifying a system OVS interface by MAC address
The OVS interface can be matched via MAC address; in that case, the
"connection.interface-name" property of the connection is empty.

When populating the ovsdb, we need to pass the actual interface name
from the device, not the one from the connection.

Fixes: 830a5a14cb29 ('device: add support for OpenVSwitch devices')

https://issues.redhat.com/browse/RHEL-34617
(cherry picked from commit be28a1173537f664e2bf14c73db1715a60ade7f0)
(cherry picked from commit 129f9e5be68f5a2db5b35793329aa5ec97b7b665)

--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,7 @@ Overview of changes since NetworkManager-1.46.0
 * Various addresses and routes handling fixed for VPNs.
 * Fix OpenVPN dynamic challenge handling (needs updated NetworkManager-openvpn).
 * Some minor bugfixes.
+* Support matching a OVS system interface by MAC address.
 
 =============================================
 NetworkManager-1.46
